updated source code and notebook

--- a/notebook/notebook.ipynb
+++ b/notebook/notebook.ipynb
@@ -30,7 +30,6 @@
     "σ_n = 1.5\n",
     "γ_low = 0.012\n",
     "γ_high = 0.024\n",
-    "\n",
     "ξ = σ_n/h_hat*δ*η"
    ]
   },
@@ -52,7 +51,7 @@
     "T = 400\n",
     "args_trace_ϕ = (-20, -1, 1000, 1e-9, 1e-3)\n",
     "\n",
-    "Et_low, r_grid_low, _, e_grid_low  = simulate_emission_quadratic(δ, η, median*γ_low, ξ, σ_n,\n",
+    "Et_low, r_grid_low, _, e_grid_low  = simulate_emission_quadratic(δ, η, median*γ_low, ξ, σ_n, # Replace σ_n with 0 if you want to set τ_2 = 0.\n",
     "                                     args_trace_ϕ=args_trace_ϕ,\n",
     "                                     r_start=r_start, T=T)\n",
     "Et_high, r_grid_high, _, e_grid_high = simulate_emission_quadratic(δ, η, median*γ_high, ξ, σ_n,\n",
@@ -188,73 +187,6 @@
    "metadata": {},
    "source": [
     "## 4. Compare $\\xi$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Simulate emission trajectory, current ξ\n",
-    "args_trace_ϕ = (-20, -1, 1000, 1e-9, 1e-3)\n",
-    "r_start = 6000\n",
-    "T = 500\n",
-    "Et_low, _, _, _ = simulate_emission_quadratic(δ, η, median*γ_low, ξ, σ_n,\n",
-    "                                     args_trace_ϕ=args_trace_ϕ,\n",
-    "                                     r_start=r_start, T=T)\n",
-    "Et_high, _, _, _  = simulate_emission_quadratic(δ, η, median*γ_high, ξ, σ_n,\n",
-    "                                      args_trace_ϕ=args_trace_ϕ,\n",
-    "                                      r_start=r_start, T=T)\n",
-    "\n",
-    "# Simulate emission trajectory, large ξ\n",
-    "args_trace_ϕ = (-20, -9, 1000, 1e-9, 1e-3)\n",
-    "Et_low_large_ξ, _, _, _  = simulate_emission_quadratic(δ, η, median*γ_low, ξ*100_000, σ_n,\n",
-    "                                             args_trace_ϕ=args_trace_ϕ,\n",
-    "                                             r_start=r_start, T=T)\n",
-    "args_trace_ϕ = (-20, -7, 1000, 1e-9, 1e-3)\n",
-    "Et_high_large_ξ, _, _, _   = simulate_emission_quadratic(δ, η, median*γ_high, ξ*100_000, σ_n,\n",
-    "                                               args_trace_ϕ=args_trace_ϕ,\n",
-    "                                               r_start=r_start, T=T)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(Et_low, label='γ = 0.012')\n",
-    "plt.plot(Et_low_large_ξ, label='γ = 0.024')\n",
-    "plt.xlabel('Year')\n",
-    "plt.ylabel('Emission')\n",
-    "plt.title('Emission Trajectory')\n",
-    "plt.ylim(0, 20)\n",
-    "plt.legend()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(Et_high, label='γ = 0.012')\n",
-    "plt.plot(Et_high_large_ξ, label='γ = 0.024')\n",
-    "plt.xlabel('Year')\n",
-    "plt.ylabel('Emission')\n",
-    "plt.title('Emission Trajectory')\n",
-    "plt.ylim(0, 20)\n",
-    "plt.legend()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## More experiments on $\\xi$"
    ]
   },
   {
