--- a/notebook/notebook.ipynb
+++ b/notebook/notebook.ipynb
@@ -30,7 +30,11 @@
     "σ_n = 1.5\n",
     "γ_low = 0.012\n",
     "γ_high = 0.024\n",
-    "ξ = σ_n/h_hat*δ*η"
+    "ξ = σ_n/h_hat*δ*η\n",
+    "\n",
+    "# Simulation setting\n",
+    "r_start = 1500\n",
+    "T = 400"
    ]
   },
   {
@@ -47,10 +51,7 @@
    "outputs": [],
    "source": [
     "# Simulate emission trajectory\n",
-    "r_start = 6000\n",
-    "T = 400\n",
-    "args_trace_ϕ = (-20, -1, 1000, 1e-9, 1e-3)\n",
-    "\n",
+    "args_trace_ϕ = (-20, -5, 1000, 1e-9, 1e-3)\n",
     "Et_low, r_grid_low, _, e_grid_low  = simulate_emission_quadratic(δ, η, median*γ_low, ξ, σ_n, # Replace σ_n with 0 if you want to set τ_2 = 0.\n",
     "                                     args_trace_ϕ=args_trace_ϕ,\n",
     "                                     r_start=r_start, T=T)\n",
@@ -65,14 +66,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(Et_low, label='γ = 0.012')\n",
-    "plt.plot(Et_high, label='γ = 0.024')\n",
-    "plt.xlabel('Year')\n",
-    "plt.ylabel('Emission')\n",
-    "plt.title('Figure 1: Emission Trajectory')\n",
-    "plt.ylim(0, 20)\n",
+    "plt.plot(r_grid_low, e_grid_low, label='low damage')\n",
+    "plt.plot(r_grid_high, e_grid_high, label='high damage')\n",
     "plt.legend()\n",
-    "plt.savefig('figure_1.pdf')\n",
+    "plt.xlabel('Reserve')\n",
+    "plt.title('Emission as a function of reserve (low damage)')\n",
     "plt.show()"
    ]
   },
@@ -82,13 +80,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(r_grid_low, e_grid_low, label='γ = 0.012')\n",
-    "plt.plot(r_grid_high, e_grid_high, label='γ = 0.024')\n",
+    "plt.plot(Et_low, label='low damage')\n",
+    "plt.plot(Et_high, label='high damage')\n",
     "plt.legend()\n",
-    "plt.xlabel('Reserve')\n",
-    "plt.xlim(-400, 6000)\n",
-    "plt.title('Figure 2: Emission as a function of reserve')\n",
-    "plt.savefig('figure_2.pdf')\n",
+    "plt.xlabel('Year')\n",
+    "plt.ylim(0,20)\n",
+    "plt.title('Emission trajectory (low damage)')\n",
     "plt.show()"
    ]
   },
@@ -139,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "T = 100\n",
+    "T_plots = 100\n",
     "# Simulate damages\n",
     "exp_avg_response_low = median * γ_low / (1-η)\n",
     "exp_avg_response_high = median * γ_high / (1-η)\n",
@@ -157,11 +154,11 @@
    "outputs": [],
    "source": [
     "# Histogram for temperature change divided by cumulative emissions\n",
-    "plt.hist(log_damage_low[:, T-1] / Et_low[:T].sum() / γ_low, bins=200)\n",
+    "plt.hist(log_damage_low[:, T_plots-1] / Et_low[:T_plots].sum() / γ_low, bins=200)\n",
     "plt.title('Temperature change divided by cumulative emissions, γ = 0.012')\n",
     "plt.show()\n",
     "# Histogram for temperature change\n",
-    "plt.hist(log_damage_low[:, T-1] / γ_low, bins=200)\n",
+    "plt.hist(log_damage_low[:, T_plots-1] / γ_low, bins=200)\n",
     "plt.title('Temperature change, γ = 0.012')\n",
     "plt.show()"
    ]
@@ -173,11 +170,11 @@
    "outputs": [],
    "source": [
     "# Histogram for temperature change divided by cumulative emissions\n",
-    "plt.hist(log_damage_high[:, T-1] / Et_high[:T].sum() / γ_high, bins=200)\n",
+    "plt.hist(log_damage_high[:, T_plots-1] / Et_high[:T_plots].sum() / γ_high, bins=200)\n",
     "plt.title('Temperature change divided by cumulative emissions, γ = 0.024')\n",
     "plt.show()\n",
     "# Histogram for temperature change\n",
-    "plt.hist(log_damage_high[:, T-1] / γ_high, bins=200)\n",
+    "plt.hist(log_damage_high[:, T_plots-1] / γ_high, bins=200)\n",
     "plt.title('Temperature change, γ = 0.024')\n",
     "plt.show()"
    ]
@@ -195,31 +192,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r_start = 6000\n",
-    "T = 500\n",
-    "\n",
     "# Simulate emission trajectory, 0.01x ξ\n",
-    "args_trace_ϕ = (-20, 0, 1000, 1e-9, 1e-3)\n",
+    "args_trace_ϕ = (-20, -5, 1000, 1e-9, 1e-3)\n",
     "Et_low_001x, r_grid_low_001x, _, e_grid_low_001x  = simulate_emission_quadratic(δ, η, median*γ_low, ξ*0.01, σ_n,\n",
     "                                                         args_trace_ϕ=args_trace_ϕ,\n",
     "                                                         r_start=r_start, T=T)\n",
-    "args_trace_ϕ = (-20, 0, 1000, 1e-9, 1e-3)\n",
+    "args_trace_ϕ = (-20, -5, 1000, 1e-9, 1e-3)\n",
     "Et_high_001x, r_grid_high_001x, _, e_grid_high_001x = simulate_emission_quadratic(δ, η, median*γ_high, ξ*0.01, σ_n,\n",
     "                                                           args_trace_ϕ=args_trace_ϕ,\n",
     "                                                           r_start=r_start, T=T)\n",
     "\n",
     "# Simulate emission trajectory, 0.05x ξ\n",
-    "args_trace_ϕ = (-20, 0, 1000, 1e-9, 1e-3)\n",
+    "args_trace_ϕ = (-20, -5, 1000, 1e-9, 1e-3)\n",
     "Et_low_005x, r_grid_low_005x, _, e_grid_low_005x  = simulate_emission_quadratic(δ, η, median*γ_low, ξ*0.05, σ_n,\n",
     "                                                         args_trace_ϕ=args_trace_ϕ,\n",
     "                                                         r_start=r_start, T=T)\n",
-    "args_trace_ϕ = (-20, 0, 1000, 1e-9, 1e-3)\n",
+    "args_trace_ϕ = (-20, -5, 1000, 1e-9, 1e-3)\n",
     "Et_high_005x, r_grid_high_005x, _, e_grid_high_005x = simulate_emission_quadratic(δ, η, median*γ_high, ξ*0.05, σ_n,\n",
     "                                                           args_trace_ϕ=args_trace_ϕ,\n",
     "                                                           r_start=r_start, T=T)\n",
     "\n",
     "# Simulate emission trajectory, 0.1x ξ\n",
-    "args_trace_ϕ = (-20, 0, 1000, 1e-9, 1e-3)\n",
+    "args_trace_ϕ = (-20, -5, 1000, 1e-9, 1e-3)\n",
     "Et_low_01x, r_grid_low_01x, _, e_grid_low_01x = simulate_emission_quadratic(δ, η, median*γ_low, ξ*0.1, σ_n,\n",
     "                                     args_trace_ϕ=args_trace_ϕ,\n",
     "                                     r_start=r_start, T=T)\n",
@@ -228,11 +222,29 @@
     "                                      r_start=r_start, T=T)\n",
     "\n",
     "# Simulate emission trajectory, 1x ξ\n",
-    "args_trace_ϕ = (-20, -1, 1000, 1e-9, 1e-3)\n",
+    "args_trace_ϕ = (-20, -5, 1000, 1e-9, 1e-3)\n",
     "Et_low, r_grid_low, _, e_grid_low = simulate_emission_quadratic(δ, η, median*γ_low, ξ, σ_n,\n",
     "                                     args_trace_ϕ=args_trace_ϕ,\n",
     "                                     r_start=r_start, T=T)\n",
     "Et_high, r_grid_high, _, e_grid_high  = simulate_emission_quadratic(δ, η, median*γ_high, ξ, σ_n,\n",
+    "                                      args_trace_ϕ=args_trace_ϕ,\n",
+    "                                      r_start=r_start, T=T)\n",
+    "\n",
+    "# Simulate emission trajectory, 2x ξ\n",
+    "args_trace_ϕ = (-20, -5, 1000, 1e-9, 1e-3)\n",
+    "Et_low_2x, r_grid_low_2x, _, e_grid_low_2x = simulate_emission_quadratic(δ, η, median*γ_low, ξ*2, σ_n,\n",
+    "                                     args_trace_ϕ=args_trace_ϕ,\n",
+    "                                     r_start=r_start, T=T)\n",
+    "Et_high_2x, r_grid_high_2x, _, e_grid_high_2x  = simulate_emission_quadratic(δ, η, median*γ_high, ξ*2, σ_n,\n",
+    "                                      args_trace_ϕ=args_trace_ϕ,\n",
+    "                                      r_start=r_start, T=T)\n",
+    "\n",
+    "# Simulate emission trajectory, 4x ξ\n",
+    "args_trace_ϕ = (-20, -5, 1000, 1e-9, 1e-3)\n",
+    "Et_low_4x, r_grid_low_4x, _, e_grid_low_4x = simulate_emission_quadratic(δ, η, median*γ_low, ξ*4, σ_n,\n",
+    "                                     args_trace_ϕ=args_trace_ϕ,\n",
+    "                                     r_start=r_start, T=T)\n",
+    "Et_high_4x, r_grid_high_4x, _, e_grid_high_4x  = simulate_emission_quadratic(δ, η, median*γ_high, ξ*4, σ_n,\n",
     "                                      args_trace_ϕ=args_trace_ϕ,\n",
     "                                      r_start=r_start, T=T)"
    ]
@@ -250,11 +262,16 @@
     "h_hat_implied_low_005x = Et_low_005x/E_tilde_low * h_hat\n",
     "h_hat_implied_low_01x = Et_low_01x/E_tilde_low * h_hat\n",
     "h_hat_implied_low = Et_low/E_tilde_low * h_hat\n",
+    "h_hat_implied_low_2x = Et_low_2x/E_tilde_low * h_hat\n",
+    "h_hat_implied_low_4x = Et_low_4x/E_tilde_low * h_hat\n",
+    "\n",
     "\n",
     "h_hat_implied_high_001x = Et_high_001x/E_tilde_high * h_hat\n",
     "h_hat_implied_high_005x = Et_high_005x/E_tilde_high * h_hat\n",
     "h_hat_implied_high_01x = Et_high_01x/E_tilde_high * h_hat\n",
-    "h_hat_implied_high = Et_high/E_tilde_high * h_hat"
+    "h_hat_implied_high = Et_high/E_tilde_high * h_hat\n",
+    "h_hat_implied_high_2x = Et_high_2x/E_tilde_high * h_hat\n",
+    "h_hat_implied_high_4x = Et_high_4x/E_tilde_high * h_hat"
    ]
   },
   {
@@ -267,6 +284,8 @@
     "plt.plot(r_grid_low_005x, e_grid_low_005x, label='0.05x ξ')\n",
     "plt.plot(r_grid_low_01x, e_grid_low_01x, label='0.1x ξ')\n",
     "plt.plot(r_grid_low, e_grid_low, label='1x ξ')\n",
+    "plt.plot(r_grid_low_2x, e_grid_low_2x, label='2x ξ')\n",
+    "plt.plot(r_grid_low_4x, e_grid_low_4x, label='4x ξ')\n",
     "plt.legend()\n",
     "plt.xlabel('Reserve')\n",
     "plt.title('Figure 1: Emission as a function of reserve (low damage)')\n",
@@ -284,6 +303,8 @@
     "plt.plot(Et_low_005x, label='0.05x ξ')\n",
     "plt.plot(Et_low_01x, label='0.1x ξ')\n",
     "plt.plot(Et_low, label='1x ξ')\n",
+    "plt.plot(Et_low_2x, label='2x ξ')\n",
+    "plt.plot(Et_low_4x, label='4x ξ')\n",
     "plt.legend()\n",
     "plt.xlabel('Year')\n",
     "plt.ylim(0,20)\n",
@@ -302,6 +323,8 @@
     "plt.plot(h_hat_implied_low_005x, label='0.05x ξ')\n",
     "plt.plot(h_hat_implied_low_01x, label='0.1x ξ')\n",
     "plt.plot(h_hat_implied_low, label='1x ξ')\n",
+    "plt.plot(h_hat_implied_low_2x, label='2x ξ')\n",
+    "plt.plot(h_hat_implied_low_4x, label='4x ξ')\n",
     "plt.legend()\n",
     "plt.xlabel('Year')\n",
     "plt.ylim(0,0.3)\n",
@@ -320,6 +343,8 @@
     "plt.plot(r_grid_high_005x, e_grid_high_005x, label='0.05x ξ')\n",
     "plt.plot(r_grid_high_01x, e_grid_high_01x, label='0.1x ξ')\n",
     "plt.plot(r_grid_high, e_grid_high, label='1x ξ')\n",
+    "plt.plot(r_grid_high_2x, e_grid_high_2x, label='2x ξ')\n",
+    "plt.plot(r_grid_high_4x, e_grid_high_4x, label='4x ξ')\n",
     "plt.legend()\n",
     "plt.xlabel('Reserve')\n",
     "plt.title('Figure 4: Emission as a function of reserve (high damage)')\n",
@@ -337,6 +362,8 @@
     "plt.plot(Et_high_005x, label='0.05x ξ')\n",
     "plt.plot(Et_high_01x, label='0.1x ξ')\n",
     "plt.plot(Et_high, label='1x ξ')\n",
+    "plt.plot(Et_high_2x, label='2x ξ')\n",
+    "plt.plot(Et_high_4x, label='4x ξ')\n",
     "plt.legend()\n",
     "plt.xlabel('Year')\n",
     "plt.ylim(0,5)\n",
@@ -355,6 +382,8 @@
     "plt.plot(h_hat_implied_high_005x, label='0.05x ξ')\n",
     "plt.plot(h_hat_implied_high_01x, label='0.1x ξ')\n",
     "plt.plot(h_hat_implied_high, label='1x ξ')\n",
+    "plt.plot(h_hat_implied_high_2x, label='2x ξ')\n",
+    "plt.plot(h_hat_implied_high_4x, label='4x ξ')\n",
     "plt.legend()\n",
     "plt.xlabel('Year')\n",
     "plt.ylim(0,0.3)\n",
