--- a/notebook/notebook.ipynb
+++ b/notebook/notebook.ipynb
@@ -192,6 +192,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Simulate emission trajectory, 0.0001x ξ\n",
+    "args_trace_ϕ = (-20, -5, 1000, 1e-9, 1e-3)\n",
+    "Et_low_00001x, r_grid_low_00001x, _, e_grid_low_00001x  = simulate_emission_quadratic(δ, η, median*γ_low, ξ*0.0001, σ_n,\n",
+    "                                                         args_trace_ϕ=args_trace_ϕ,\n",
+    "                                                         r_start=r_start, T=T)\n",
+    "args_trace_ϕ = (-20, -5, 1000, 1e-9, 1e-3)\n",
+    "Et_high_00001x, r_grid_high_00001x, _, e_grid_high_00001x = simulate_emission_quadratic(δ, η, median*γ_high, ξ*0.0001, σ_n,\n",
+    "                                                           args_trace_ϕ=args_trace_ϕ,\n",
+    "                                                           r_start=r_start, T=T)\n",
+    "\n",
+    "# Simulate emission trajectory, 0.001x ξ\n",
+    "args_trace_ϕ = (-20, -5, 1000, 1e-9, 1e-3)\n",
+    "Et_low_0001x, r_grid_low_0001x, _, e_grid_low_0001x  = simulate_emission_quadratic(δ, η, median*γ_low, ξ*0.001, σ_n,\n",
+    "                                                         args_trace_ϕ=args_trace_ϕ,\n",
+    "                                                         r_start=r_start, T=T)\n",
+    "args_trace_ϕ = (-20, -5, 1000, 1e-9, 1e-3)\n",
+    "Et_high_0001x, r_grid_high_0001x, _, e_grid_high_0001x = simulate_emission_quadratic(δ, η, median*γ_high, ξ*0.001, σ_n,\n",
+    "                                                           args_trace_ϕ=args_trace_ϕ,\n",
+    "                                                           r_start=r_start, T=T)\n",
+    "\n",
     "# Simulate emission trajectory, 0.01x ξ\n",
     "args_trace_ϕ = (-20, -5, 1000, 1e-9, 1e-3)\n",
     "Et_low_001x, r_grid_low_001x, _, e_grid_low_001x  = simulate_emission_quadratic(δ, η, median*γ_low, ξ*0.01, σ_n,\n",
@@ -199,16 +219,6 @@
     "                                                         r_start=r_start, T=T)\n",
     "args_trace_ϕ = (-20, -5, 1000, 1e-9, 1e-3)\n",
     "Et_high_001x, r_grid_high_001x, _, e_grid_high_001x = simulate_emission_quadratic(δ, η, median*γ_high, ξ*0.01, σ_n,\n",
-    "                                                           args_trace_ϕ=args_trace_ϕ,\n",
-    "                                                           r_start=r_start, T=T)\n",
-    "\n",
-    "# Simulate emission trajectory, 0.05x ξ\n",
-    "args_trace_ϕ = (-20, -5, 1000, 1e-9, 1e-3)\n",
-    "Et_low_005x, r_grid_low_005x, _, e_grid_low_005x  = simulate_emission_quadratic(δ, η, median*γ_low, ξ*0.05, σ_n,\n",
-    "                                                         args_trace_ϕ=args_trace_ϕ,\n",
-    "                                                         r_start=r_start, T=T)\n",
-    "args_trace_ϕ = (-20, -5, 1000, 1e-9, 1e-3)\n",
-    "Et_high_005x, r_grid_high_005x, _, e_grid_high_005x = simulate_emission_quadratic(δ, η, median*γ_high, ξ*0.05, σ_n,\n",
     "                                                           args_trace_ϕ=args_trace_ϕ,\n",
     "                                                           r_start=r_start, T=T)\n",
     "\n",
@@ -230,21 +240,21 @@
     "                                      args_trace_ϕ=args_trace_ϕ,\n",
     "                                      r_start=r_start, T=T)\n",
     "\n",
-    "# Simulate emission trajectory, 2x ξ\n",
+    "# Simulate emission trajectory, 10x ξ\n",
     "args_trace_ϕ = (-20, -5, 1000, 1e-9, 1e-3)\n",
-    "Et_low_2x, r_grid_low_2x, _, e_grid_low_2x = simulate_emission_quadratic(δ, η, median*γ_low, ξ*2, σ_n,\n",
+    "Et_low_10x, r_grid_low_10x, _, e_grid_low_10x = simulate_emission_quadratic(δ, η, median*γ_low, ξ*10, σ_n,\n",
     "                                     args_trace_ϕ=args_trace_ϕ,\n",
     "                                     r_start=r_start, T=T)\n",
-    "Et_high_2x, r_grid_high_2x, _, e_grid_high_2x  = simulate_emission_quadratic(δ, η, median*γ_high, ξ*2, σ_n,\n",
+    "Et_high_10x, r_grid_high_10x, _, e_grid_high_10x  = simulate_emission_quadratic(δ, η, median*γ_high, ξ*10, σ_n,\n",
     "                                      args_trace_ϕ=args_trace_ϕ,\n",
     "                                      r_start=r_start, T=T)\n",
     "\n",
-    "# Simulate emission trajectory, 4x ξ\n",
+    "# Simulate emission trajectory, 100x ξ\n",
     "args_trace_ϕ = (-20, -5, 1000, 1e-9, 1e-3)\n",
-    "Et_low_4x, r_grid_low_4x, _, e_grid_low_4x = simulate_emission_quadratic(δ, η, median*γ_low, ξ*4, σ_n,\n",
+    "Et_low_100x, r_grid_low_100x, _, e_grid_low_100x = simulate_emission_quadratic(δ, η, median*γ_low, ξ*100, σ_n,\n",
     "                                     args_trace_ϕ=args_trace_ϕ,\n",
     "                                     r_start=r_start, T=T)\n",
-    "Et_high_4x, r_grid_high_4x, _, e_grid_high_4x  = simulate_emission_quadratic(δ, η, median*γ_high, ξ*4, σ_n,\n",
+    "Et_high_100x, r_grid_high_100x, _, e_grid_high_100x  = simulate_emission_quadratic(δ, η, median*γ_high, ξ*100, σ_n,\n",
     "                                      args_trace_ϕ=args_trace_ϕ,\n",
     "                                      r_start=r_start, T=T)"
    ]
@@ -258,20 +268,21 @@
     "E_tilde_low = δ*η/(median*γ_low)\n",
     "E_tilde_high = δ*η/(median*γ_high)\n",
     "\n",
+    "h_hat_implied_low_00001x = Et_low_00001x/E_tilde_low * h_hat\n",
+    "h_hat_implied_low_0001x = Et_low_0001x/E_tilde_low * h_hat\n",
     "h_hat_implied_low_001x = Et_low_001x/E_tilde_low * h_hat\n",
-    "h_hat_implied_low_005x = Et_low_005x/E_tilde_low * h_hat\n",
     "h_hat_implied_low_01x = Et_low_01x/E_tilde_low * h_hat\n",
     "h_hat_implied_low = Et_low/E_tilde_low * h_hat\n",
-    "h_hat_implied_low_2x = Et_low_2x/E_tilde_low * h_hat\n",
-    "h_hat_implied_low_4x = Et_low_4x/E_tilde_low * h_hat\n",
+    "h_hat_implied_low_10x = Et_low_10x/E_tilde_low * h_hat\n",
+    "h_hat_implied_low_100x = Et_low_100x/E_tilde_low * h_hat\n",
     "\n",
-    "\n",
+    "h_hat_implied_high_00001x = Et_high_00001x/E_tilde_high * h_hat\n",
+    "h_hat_implied_high_0001x = Et_high_0001x/E_tilde_high * h_hat\n",
     "h_hat_implied_high_001x = Et_high_001x/E_tilde_high * h_hat\n",
-    "h_hat_implied_high_005x = Et_high_005x/E_tilde_high * h_hat\n",
     "h_hat_implied_high_01x = Et_high_01x/E_tilde_high * h_hat\n",
     "h_hat_implied_high = Et_high/E_tilde_high * h_hat\n",
-    "h_hat_implied_high_2x = Et_high_2x/E_tilde_high * h_hat\n",
-    "h_hat_implied_high_4x = Et_high_4x/E_tilde_high * h_hat"
+    "h_hat_implied_high_10x = Et_high_10x/E_tilde_high * h_hat\n",
+    "h_hat_implied_high_100x = Et_high_100x/E_tilde_high * h_hat"
    ]
   },
   {
@@ -280,12 +291,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.plot(r_grid_low_00001x, e_grid_low_00001x, label='1e-4x ξ')\n",
+    "plt.plot(r_grid_low_0001x, e_grid_low_0001x, label='0.001x ξ')\n",
     "plt.plot(r_grid_low_001x, e_grid_low_001x, label='0.01x ξ')\n",
-    "plt.plot(r_grid_low_005x, e_grid_low_005x, label='0.05x ξ')\n",
     "plt.plot(r_grid_low_01x, e_grid_low_01x, label='0.1x ξ')\n",
     "plt.plot(r_grid_low, e_grid_low, label='1x ξ')\n",
-    "plt.plot(r_grid_low_2x, e_grid_low_2x, label='2x ξ')\n",
-    "plt.plot(r_grid_low_4x, e_grid_low_4x, label='4x ξ')\n",
+    "plt.plot(r_grid_low_10x, e_grid_low_10x, label='10x ξ')\n",
+    "plt.plot(r_grid_low_100x, e_grid_low_100x, label='100x ξ')\n",
     "plt.legend()\n",
     "plt.xlabel('Reserve')\n",
     "plt.title('Figure 1: Emission as a function of reserve (low damage)')\n",
@@ -299,15 +311,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.plot(Et_low_00001x, label='1e-4x ξ')\n",
+    "plt.plot(Et_low_0001x, label='0.001x ξ')\n",
     "plt.plot(Et_low_001x, label='0.01x ξ')\n",
-    "plt.plot(Et_low_005x, label='0.05x ξ')\n",
     "plt.plot(Et_low_01x, label='0.1x ξ')\n",
     "plt.plot(Et_low, label='1x ξ')\n",
-    "plt.plot(Et_low_2x, label='2x ξ')\n",
-    "plt.plot(Et_low_4x, label='4x ξ')\n",
+    "plt.plot(Et_low_10x, label='10x ξ')\n",
+    "plt.plot(Et_low_100x, label='100x ξ')\n",
     "plt.legend()\n",
     "plt.xlabel('Year')\n",
-    "plt.ylim(0,20)\n",
+    "# plt.ylim(0,20)\n",
     "plt.title('Figure 2: Emission trajectory (low damage)')\n",
     "plt.savefig('figure_2.pdf')\n",
     "plt.show()"
@@ -319,12 +332,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.plot(h_hat_implied_low_00001x, label='1e-4x ξ')\n",
+    "plt.plot(h_hat_implied_low_0001x, label='0.001x ξ')\n",
     "plt.plot(h_hat_implied_low_001x, label='0.01x ξ')\n",
-    "plt.plot(h_hat_implied_low_005x, label='0.05x ξ')\n",
     "plt.plot(h_hat_implied_low_01x, label='0.1x ξ')\n",
     "plt.plot(h_hat_implied_low, label='1x ξ')\n",
-    "plt.plot(h_hat_implied_low_2x, label='2x ξ')\n",
-    "plt.plot(h_hat_implied_low_4x, label='4x ξ')\n",
+    "plt.plot(h_hat_implied_low_10x, label='10x ξ')\n",
+    "plt.plot(h_hat_implied_low_100x, label='100x ξ')\n",
     "plt.legend()\n",
     "plt.xlabel('Year')\n",
     "plt.ylim(0,0.3)\n",
@@ -339,12 +353,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.plot(r_grid_high_00001x, e_grid_high_001x, label='1e-4x ξ')\n",
+    "plt.plot(r_grid_high_0001x, e_grid_high_0001x, label='0.001x ξ')\n",
     "plt.plot(r_grid_high_001x, e_grid_high_001x, label='0.01x ξ')\n",
-    "plt.plot(r_grid_high_005x, e_grid_high_005x, label='0.05x ξ')\n",
     "plt.plot(r_grid_high_01x, e_grid_high_01x, label='0.1x ξ')\n",
     "plt.plot(r_grid_high, e_grid_high, label='1x ξ')\n",
-    "plt.plot(r_grid_high_2x, e_grid_high_2x, label='2x ξ')\n",
-    "plt.plot(r_grid_high_4x, e_grid_high_4x, label='4x ξ')\n",
+    "plt.plot(r_grid_high_10x, e_grid_high_10x, label='2x ξ')\n",
+    "plt.plot(r_grid_high_100x, e_grid_high_100x, label='4x ξ')\n",
     "plt.legend()\n",
     "plt.xlabel('Reserve')\n",
     "plt.title('Figure 4: Emission as a function of reserve (high damage)')\n",
@@ -358,15 +373,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.plot(Et_high_00001x, label='1e-4x ξ')\n",
+    "plt.plot(Et_high_0001x, label='0.001x ξ')\n",
     "plt.plot(Et_high_001x, label='0.01x ξ')\n",
-    "plt.plot(Et_high_005x, label='0.05x ξ')\n",
     "plt.plot(Et_high_01x, label='0.1x ξ')\n",
     "plt.plot(Et_high, label='1x ξ')\n",
-    "plt.plot(Et_high_2x, label='2x ξ')\n",
-    "plt.plot(Et_high_4x, label='4x ξ')\n",
+    "plt.plot(Et_high_10x, label='10x ξ')\n",
+    "plt.plot(Et_high_100x, label='100x ξ')\n",
     "plt.legend()\n",
     "plt.xlabel('Year')\n",
-    "plt.ylim(0,5)\n",
+    "# plt.ylim(0,9)\n",
     "plt.title('Figure 5: Emission trajectory (high damage)')\n",
     "plt.savefig('figure_5.pdf')\n",
     "plt.show()"
@@ -378,12 +394,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.plot(h_hat_implied_high_00001x, label='1e-4x ξ')\n",
+    "plt.plot(h_hat_implied_high_0001x, label='0.001x ξ')\n",
     "plt.plot(h_hat_implied_high_001x, label='0.01x ξ')\n",
-    "plt.plot(h_hat_implied_high_005x, label='0.05x ξ')\n",
     "plt.plot(h_hat_implied_high_01x, label='0.1x ξ')\n",
     "plt.plot(h_hat_implied_high, label='1x ξ')\n",
-    "plt.plot(h_hat_implied_high_2x, label='2x ξ')\n",
-    "plt.plot(h_hat_implied_high_4x, label='4x ξ')\n",
+    "plt.plot(h_hat_implied_high_10x, label='10x ξ')\n",
+    "plt.plot(h_hat_implied_high_100x, label='100x ξ')\n",
     "plt.legend()\n",
     "plt.xlabel('Year')\n",
     "plt.ylim(0,0.3)\n",
