--- a/notebook/notebook.ipynb
+++ b/notebook/notebook.ipynb
@@ -707,9 +707,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ry38",
    "language": "python",
-   "name": "python3"
+   "name": "ry38"
   },
   "language_info": {
    "codemirror_mode": {
@@ -721,7 +721,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.7"
   }
  },
  "nbformat": 4,
