--- a/notebook/BH_modified.ipynb
+++ b/notebook/BH_modified.ipynb
@@ -2,30 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from numba import njit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Model parameters\n",
     "median = 1.75/1000\n",
-    "γ = 0.024\n",
+    "γ = 0.018\n",
     "τ = median * γ\n",
     "δ = 0.01\n",
     "η = 0.032\n",
-    "ξ_m = 0.00128\n",
+    "ξ_m = 0.00256\n",
     "\n",
     "μ_2 = 1.\n",
-    "σ_2 = 1.2\n",
-    "ρ = 0.21*2/(σ_2**2*μ_2) # Match moments, using 100 year's std"
+    "ρ = 0.5\n",
+    "σ_2 = np.sqrt(0.21**2*2*ρ/μ_2) # Match moments, using 100 year's std"
    ]
   },
   {
@@ -53,9 +54,138 @@
     "Substituting terms we have:\n",
     "\n",
     "$$\n",
-    "0 = - \\delta \\phi(r, z_2) + \\delta \\eta \\log e^* - \\delta\\eta - \\frac{\\xi_m}{2}\\left[\\frac{\\partial \\phi}{\\partial z_2}(r, z_2)\\right]^2z_2|\\sigma_2|^2 + \\left[\\frac{\\partial \\phi}{\\partial z_2}(r, z_2)\\right]\\left[-\\rho (z_2 -\\mu_2)\\right] + \\left[\\frac{\\partial^2 \\phi}{\\partial(z_2)^2}(r, z_2)\\right]\\left(\\frac{z_2|\\sigma_2|^2}{2}\\right)\n",
-    "$$"
+    "0 = - \\delta \\phi(r, z_2) + \\delta \\eta \\log e^* - \\tau z_2 e^* - \\frac{\\partial \\phi}{\\partial r}(r, z_2) e^* - \\frac{\\xi_m}{2}\\left[\\frac{\\partial \\phi}{\\partial z_2}(r, z_2)\\right]^2z_2|\\sigma_2|^2 + \\left[\\frac{\\partial \\phi}{\\partial z_2}(r, z_2)\\right]\\left[-\\rho (z_2 -\\mu_2)\\right] + \\left[\\frac{\\partial^2 \\phi}{\\partial(z_2)^2}(r, z_2)\\right]\\left(\\frac{z_2|\\sigma_2|^2}{2}\\right)\n",
+    "$$\n",
+    "\n",
+    "False transient method:\n",
+    "\n",
+    "$$\n",
+    "\\frac{{\\color{red}{\\phi_{i+1}(r, z_2)}}-{\\color{blue}{\\phi_{i}(r, z_2)}}}{\\epsilon} = - \\delta {\\color{red}{\\phi_{i+1}(r, z_2)}} + \\delta \\eta \\log \\color{blue}{e^*} - \\tau z_2 \\color{blue}{e^*} - \\color{red}{\\frac{\\partial \\phi_{i+1}}{\\partial r}(r, z_2)} \\color{blue}{e^*} - \\frac{\\xi_m}{2}\\left[\\color{blue}{\\frac{\\partial \\phi_i}{\\partial z_2}(r, z_2)}\\right]^2z_2|\\sigma_2|^2 + \\left[\\color{red}{\\frac{\\partial \\phi_{i+1}}{\\partial z_2}(r, z_2)}\\right]\\left[-\\rho (z_2 -\\mu_2)\\right] + \\left[\\color{red}{\\frac{\\partial^2 \\phi_{i+1}}{\\partial(z_2)^2}(r, z_2)}\\right]\\left(\\frac{z_2|\\sigma_2|^2}{2}\\right)\n",
+    "$$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\color{red}{\\frac{\\partial \\phi_{i+1}}{\\partial r}(r, z_2)} & \\approx \\frac{\\phi_{i+1}(r+\\Delta r, z_2) - \\phi_{i+1}(r, z_2)}{\\Delta r} \\mathbb{1}\\{e^*<0\\} + \\frac{\\phi_{i+1}(r, z_2) - \\phi_{i+1}(r- \\Delta r, z_2)}{\\Delta r} \\mathbb{1}\\{e^*>0\\}\\\\\n",
+    "\\color{red}{\\frac{\\partial \\phi_{i+1}}{\\partial z_2}(r, z_2)} & \\approx \\frac{\\phi_{i+1}(r, z_2+\\Delta z) - \\phi_{i+1}(r, z_2)}{\\Delta z} \\mathbb{1}\\{z_2<\\mu_2\\} + \\frac{\\phi_{i+1}(r, z_2) - \\phi_{i+1}(r, z_2- \\Delta z)}{\\Delta z} \\mathbb{1}\\{z_2>\\mu_2\\}\\\\\n",
+    "\\color{red}{\\frac{\\partial^2 \\phi_{i+1}}{\\partial z_2^2}(r, z_2)} & \\approx \\frac{\\phi_{i+1}(r, z_2 + \\Delta z) - 2\\phi_{i+1}(r, z_2) + \\phi_{i+1}(r, z_2-\\Delta z)}{(\\Delta z)^2}\n",
+    "\\end{align*}\n",
+    "\n",
+    "Notice that on the boundary points, we 1) use one-sided difference to estimate the first-order derivative and 2) assume the second-order derivative is the same to the second-order derivative of the point next to it."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@njit(parallel=True, cache=True)\n",
+    "def solver(ϕ_grid, r_grid, z_grid, ϵ, τ, δ, η, ξ_m, μ_2, σ_2, ρ):\n",
+    "    n_r = len(r_grid)\n",
+    "    n_z = len(z_grid)\n",
+    "    Δ_r = r_grid[1] - r_grid[0]\n",
+    "    Δ_z = z_grid[1] - z_grid[0]\n",
+    "    LHS = np.zeros((n_r*n_z, n_r*n_z))\n",
+    "    RHS = np.zeros(n_r*n_z)\n",
+    "    for j in range(n_z):\n",
+    "        for i in range(n_r):\n",
+    "            # Get index\n",
+    "            idx = j*n_r + i\n",
+    "            idx_rp1 = idx + 1\n",
+    "            idx_rm1 = idx - 1\n",
+    "            idx_zp1 = (j+1)*n_r + i\n",
+    "            idx_zp2 = (j+2)*n_r + i\n",
+    "            idx_zm1 = (j-1)*n_r + i\n",
+    "            idx_zm2 = (j-2)*n_r + i\n",
+    "            ϕ = ϕ_grid[idx]\n",
+    "            z = z_grid[j]\n",
+    "            LHS[idx, idx] = -δ - 1./ϵ\n",
+    "            # Compute values in blue\n",
+    "            if i == 0:\n",
+    "                dϕdr = (ϕ_grid[idx_rp1]-ϕ_grid[idx])/Δ_r\n",
+    "                e = δ*η/(τ*z+dϕdr)\n",
+    "                LHS[idx, idx] += e/Δ_r\n",
+    "                LHS[idx, idx_rp1] += -e/Δ_r\n",
+    "            elif i == n_r-1:\n",
+    "                dϕdr = (ϕ_grid[idx]-ϕ_grid[idx_rm1])/Δ_r\n",
+    "                e = δ*η/(τ*z+dϕdr)\n",
+    "                LHS[idx, idx] += -e/Δ_r\n",
+    "                LHS[idx, idx_rm1] += e/Δ_r\n",
+    "            else:\n",
+    "                dϕdr = (ϕ_grid[idx_rp1]-ϕ_grid[idx_rm1])/(2*Δ_r)\n",
+    "                e = δ*η/(τ*z+dϕdr)\n",
+    "                LHS[idx, idx] += e/Δ_r*(e<0) - e/Δ_r*(e>0)\n",
+    "                LHS[idx, idx_rp1] += -e/Δ_r*(e<0)\n",
+    "                LHS[idx, idx_rm1] += e/Δ_r*(e>0)\n",
+    "            temp_1 = - ρ*(z-μ_2)\n",
+    "            temp_2 = z*σ_2**2/2\n",
+    "            if j == 0:\n",
+    "                dϕdz = (ϕ_grid[idx_zp1]-ϕ_grid[idx])/Δ_z\n",
+    "                LHS[idx, idx] += -temp_1/Δ_z + temp_2/(Δ_z**2)  \n",
+    "                LHS[idx, idx_zp1] += temp_1/Δ_z - temp_2*2/(Δ_z**2)\n",
+    "                LHS[idx, idx_zp2] += temp_2/(Δ_z**2)\n",
+    "            elif j == n_z-1:\n",
+    "                dϕdz = (ϕ_grid[idx]-ϕ_grid[idx_zm1])/Δ_z\n",
+    "                LHS[idx, idx] += temp_1/Δ_z + temp_2/(Δ_z**2)\n",
+    "                LHS[idx, idx_zm1] += -temp_1/Δ_z - temp_2*2/(Δ_z**2)\n",
+    "                LHS[idx, idx_zm2] += temp_2/(Δ_z**2)            \n",
+    "            else:\n",
+    "                dϕdz = (ϕ_grid[idx_zp1]-ϕ_grid[idx_zm1])/(2*Δ_z)\n",
+    "                LHS[idx, idx] += temp_1/Δ_z*(-1.*(z<μ_2)+(z>μ_2)) - temp_2*2/(Δ_z**2)\n",
+    "                LHS[idx, idx_zp1] += temp_1/Δ_z*(z<μ_2) + temp_2/(Δ_z**2)\n",
+    "                LHS[idx, idx_zm1] += -temp_1/Δ_z*(z>μ_2) + temp_2/(Δ_z**2)\n",
+    "            RHS[idx] = -(1./ϵ*ϕ + δ*η*np.log(e) - τ*z*e - ξ_m/2*dϕdz**2*z*σ_2**2)\n",
+    "    ϕ = np.linalg.solve(LHS, RHS)\n",
+    "    return ϕ\n",
+    "\n",
+    "\n",
+    "@njit\n",
+    "def false_transient(ϕ_grid, r_grid, z_grid, ϵ, τ, δ, η, ξ_m, μ_2, σ_2, ρ, max_iter=10_000, tol=1e-9):\n",
+    "    n_r = len(r_grid)\n",
+    "    n_z = len(z_grid)\n",
+    "    error = 1.\n",
+    "    count = 0\n",
+    "    while error > tol and count < max_iter:\n",
+    "        ϕ_grid_old = ϕ_grid.copy()\n",
+    "        ϕ_grid = solver(ϕ_grid, r_grid, z_grid, ϵ, τ, δ, η, ξ_m, μ_2, σ_2, ρ)\n",
+    "        error = np.max(np.abs(ϕ_grid_old-ϕ_grid))/ϵ\n",
+    "        count += 1\n",
+    "        print('Iteration:', count, ', error:', error)\n",
+    "    return ϕ_grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ϵ = 0.5\n",
+    "r_max = 9000.\n",
+    "z_max = 4.\n",
+    "n_r = 200\n",
+    "n_z = 20\n",
+    "r_grid = np.linspace(0, r_max, n_r)\n",
+    "z_grid = np.linspace(1e-5, z_max, n_z)\n",
+    "ϕ_grid = np.zeros(n_r*n_z) # initial guess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ϕ_grid = false_transient(ϕ_grid, r_grid, z_grid, ϵ, τ, δ, η, ξ_m, μ_2, σ_2, ρ, max_iter=10_000, tol=1e-7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
