--- a/notebook/BH_modified_fast.ipynb
+++ b/notebook/BH_modified_fast.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "import numpy as np\n",
     "import SolveLinSys\n",
-    "from utilities import compute_derivatives"
+    "from utilities import compute_derivatives_2d"
    ]
   },
   {
@@ -70,9 +70,9 @@
     "    while error > tol and count < max_iter:\n",
     "        print('Iteration:{:d}'.format(count))\n",
     "        v_old = v0.copy()\n",
-    "        v0_dz = compute_derivatives(v0, 0, 1, Δ_z)\n",
-    "        v0_dzz = compute_derivatives(v0, 0, 2, Δ_z)\n",
-    "        v0_dr = compute_derivatives(v0, 1, 1, Δ_r)\n",
+    "        v0_dz = compute_derivatives_2d(v0, 0, 1, Δ_z)\n",
+    "        v0_dzz = compute_derivatives_2d(v0, 0, 2, Δ_z)\n",
+    "        v0_dr = compute_derivatives_2d(v0, 1, 1, Δ_r)\n",
     "\n",
     "        e = δ * η / (τ*z_mat + v0_dr)\n",
     "        h = -v0_dz*np.sqrt(z_mat)*σ_2/ξ_m\n",
