--- a/notebook/BH_modified_multiplier_fast-Copy1.ipynb
+++ b/notebook/BH_modified_multiplier_fast-Copy1.ipynb
@@ -49,10 +49,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def false_transient_one_iteration(stateSpace, A, B_b, B_z, C_bb, C_zz, D, v0, ε=.3, tol=-10):\n",
+    "def false_transient_one_iteration(stateSpace, A, B_z, B_b, C_zz, C_bb, D, v0, ε=.3, tol=-10):\n",
     "    A = A.reshape(-1, 1, order='F')\n",
-    "    B = np.hstack([B_b.reshape(-1, 1, order='F'), B_z.reshape(-1, 1, order='F')])\n",
-    "    C = np.hstack([C_bb.reshape(-1, 1, order='F'), C_zz.reshape(-1, 1, order='F')])\n",
+    "    B = np.hstack([B_z.reshape(-1, 1, order='F'), B_b.reshape(-1, 1, order='F')])\n",
+    "    C = np.hstack([C_zz.reshape(-1, 1, order='F'), C_bb.reshape(-1, 1, order='F')])\n",
     "    D = D.reshape(-1, 1, order='F')\n",
     "    v0 = v0.reshape(-1, 1, order='F')\n",
     "    out = SolveLinSys.solveFT(stateSpace, A, B, C, D, v0, ε, tol)\n",
