add modified plots and scripts

--- a/notebook/PaperResults.ipynb
+++ b/notebook/PaperResults.ipynb
@@ -6010,7 +6010,7 @@
     "\n",
     "The implied standard deviation is computed as follows:\n",
     "$$\n",
-    "    \\cfrac{\\sqrt{\\sum{e_t^2}}\\cdot \\sigma_n \\cdot [-(v_y)'\\Theta]}{(\\sum{e_t})\\cdot\\frac{\\gamma(1-\\eta)}{1000}} =  \\cfrac{\\sqrt{\\sum{e_t^2}}}{\\sum{e_t}}\\cdot \\sigma_n\\cdot \\text{median}\\cdot 1000\n",
+    "    \\cfrac{\\sqrt{\\sum{e_t^2}}\\cdot \\sigma_n \\cdot [-(v_y)'\\Theta]}{(\\sum{e_t})\\cdot\\frac{\\gamma}{1000}} =  \\cfrac{\\sqrt{\\sum{e_t^2}}}{\\sum{e_t}}\\cdot \\sigma_n\\cdot \\text{median}\\cdot 1000\n",
     "$$"
    ]
   },
