updated parameter setting

--- a/notebook/BH_modified_3D-Copy1.ipynb
+++ b/notebook/BH_modified_3D-Copy1.ipynb
@@ -22,8 +22,16 @@
     "Equation:\n",
     "\n",
     "$$\n",
-    "0 = \\max_{e} \\min_{h_2} b\\left[\\delta \\eta \\log e - \\delta(1-\\eta)y z_2 -\\frac{\\gamma_2}{2}\\beta_f^2 z_2^2y^2  + \\xi_m\\frac{(h_2)^2}{2}\\right] -\\ell e + \\frac{\\partial \\phi}{\\partial y}(y, b, z_2;\\ell) e - \\frac{\\partial \\phi}{\\partial b}(y, b, z_2;\\ell) \\delta b + \\left[\\frac{\\partial \\phi}{\\partial z_2}(y, b, z_2;\\ell)\\right]\\left[-\\rho (z_2 -\\mu_2) + \\sqrt{z_2} \\sigma_2 h_2\\right] + \\left[\\frac{\\partial^2 \\phi}{\\partial(z_2)^2}(y,b, z_2;\\ell)\\right]\\left(\\frac{z_2|\\sigma_2|^2}{2}\\right)\n",
+    "0 = \\max_{e} \\min_{h_2} b\\left[\\delta \\eta \\log e - \\delta(1-\\eta) \\color{red}{\\gamma_1} y z_2 -\\frac{\\gamma_2}{2}\\beta_f^2 z_2^2y^2  + \\xi_m\\frac{(h_2)^2}{2}\\right] -\\ell e + \\frac{\\partial \\phi}{\\partial y}(y, b, z_2;\\ell) e - \\frac{\\partial \\phi}{\\partial b}(y, b, z_2;\\ell) \\delta b + \\left[\\frac{\\partial \\phi}{\\partial z_2}(y, b, z_2;\\ell)\\right]\\left[-\\rho (z_2 -\\mu_2) + \\sqrt{z_2} \\sigma_2 h_2\\right] + \\left[\\frac{\\partial^2 \\phi}{\\partial(z_2)^2}(y,b, z_2;\\ell)\\right]\\left(\\frac{z_2|\\sigma_2|^2}{2}\\right)\n",
     "$$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\color{red}{\\gamma_1} &= 0.00017675\\\\\n",
+    "\\gamma_2 &= 0.0044\\\\\n",
+    "\\beta_f & = 1.86/1000\n",
+    "\\end{align*}\n",
     "\n",
     "FOC of $h_2$ gives : \n",
     "\n",
@@ -116,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,22 +167,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.05"
+       "0.2954961928688761"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.sqrt(σ_2**2/2/ρ)*5"
+    "σ_2"
    ]
   },
   {
