--- a/notebook/notebook.ipynb
+++ b/notebook/notebook.ipynb
@@ -30,7 +30,8 @@
     "σ_n = 1.5\n",
     "γ_low = 0.012\n",
     "γ_high = 0.024\n",
-    "ξ = σ_n/h_hat*δ*η\n",
+    "# ξ = σ_n/h_hat*δ*η\n",
+    "ξ = 8*δ*η\n",
     "\n",
     "# Simulation setting\n",
     "# r_start = 1500\n",
@@ -629,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
